# elm-rust-boilerplate-minimal

./: .ports.env  Dockerfile  README.md  bonnie.toml  docker-compose.yml
api/: Cargo.toml
ui/: .gitignore  .pnp.js  .yarnrc.yml  package.json  webpack.config.js
ui/src/: Main.elm  index.html  index.js
