[package]
name = "elm-rust-boilerplate-api"
version = "0.1.0"
authors = ["arctic_hen7 <arctic_hen7@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# This annotation explicitly states the default behaviour, but it's needed for `cargo vendor` in the Docker build
[[bin]]
name = "main"
path = "src/main.rs"
